# ar-recomp

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEBUG.md  LICENSE  Makefile  README.md  codes.txt  config.ini  dev-config.ini  nocheats-config.ini  snesbuild.ini  snesrecomp  x.txt
docs/: BUILD_TOOLING.md  SEAMS.md  bug-ledger.md  nx-pipeline.md  progress.md  ram-map.md  rendering-engine.md  research-symbol-map.md  rom-map.md  save-format.md  settings-system.md  sim-object-catalog.md  sim3d-phase0.md  widescreen-survey.md
game-assets/: manifest.ini
game-assets/hd/: manifest.ini
recomp/: bank00.cfg  bank01.cfg  bank02.cfg  bank03.cfg  bank04.cfg  bank05.cfg  bank06.cfg  bank07.cfg  bank08.cfg  bank09.cfg  bank0a.cfg  bank0b.cfg  bank0c.cfg  bank0d.cfg  bank0e.cfg  bank0f.cfg  bank10.cfg  bank11.cfg  bank12.cfg  bank13.cfg  bank14.cfg  bank15.cfg  bank16.cfg  bank17.cfg  bank18.cfg  bank19.cfg  bank1a.cfg  bank1b.cfg  bank1c.cfg
snesrecomp-go/: .gitignore  ATTRIBUTION.md  LICENSE  README.md  go.mod
snesrecomp-go/cmd/snesbuild/: main.go
snesrecomp-go/cmd/v2regen/: main.go
snesrecomp-go/docs/: CFG_FORMAT.md  PROJECT_INTEGRATION.md  RUNTIME.md
snesrecomp-go/internal/artifact/: artifact.go  artifact_test.go
snesrecomp-go/internal/cfg/: cfg.go  cfg_test.go
snesrecomp-go/internal/codegen/: address.go  emitter.go  emitter_extra.go  emitter_test.go  widths.go
snesrecomp-go/internal/config/: config.go  config_test.go
snesrecomp-go/internal/cpu65816/: decoder.go  decoder_test.go
snesrecomp-go/internal/decoder/: analyze.go  decoder.go  decoder_test.go  dispatch.go  successors.go  types.go
snesrecomp-go/internal/emitter/: bank.go  bank_test.go  dispatch.go  function.go  function_test.go  rts_guard_test.go
snesrecomp-go/internal/ir/: ir.go
snesrecomp-go/internal/lowering/: lowering.go  lowering_test.go
snesrecomp-go/internal/project/: build.go  hermetic.go  hermetic_test.go  manifest.go  manifest_test.go  paths.go  project_test.go  regen.go
snesrecomp-go/internal/regen/: output.go  regen.go  regen_test.go
snesrecomp-go/internal/rom/: rom.go  rom_test.go
snesrecomp-go/internal/toolchain/: toolchain.go  toolchain_test.go
snesrecomp-go/internal/tooling/: funcs.go  linkaudit.go  metadata.go  opcodediff.go  rtsweb.go  stubs.go  tooling_test.go
snesrecomp-go/internal/work/: work.go  work_test.go
snesrecomp-go/packaging/: CMakeLists.txt  CMakePresets.json  README.txt.in  check_package.cmake.in
snesrecomp-go/packaging/scripts/: run-build.bat  run-build.command  run-build.sh
snesrecomp-go/packaging/templates/: audio-README.txt  hd-README.txt
snesrecomp-go/runtime/: README.md  runner.cmake
snesrecomp-go/runtime/src/: ar_trace.c  ar_trace.h  audio_trace.h  common_cpu_infra.c  common_cpu_infra.h  common_rtl.c  common_rtl.h  cpu_state.c  cpu_state.h  cpu_trace.c  cpu_trace.h  debug_server.h  debug_server_stub.c  keybinds.h  util.c  util.h
snesrecomp-go/runtime/src/snes/: apu.c  apu.h  cart.c  cart.h  cpu.h  dma.c  dma.h  dsp.c  dsp.h  msu1.c  msu1.h  ppu.c  ppu.h  ppu_old.c  saveload.h  snes.c  snes.h  snes_other.c  snes_regs.h  spc.c  spc.h
src/: actraiser_00.c  actraiser_bugfixes.c  actraiser_cpu_infra.c  actraiser_game.h  actraiser_rtl.c  actraiser_rtl.h  actraiser_spc_player.c  actraiser_spc_player.h  actraiser_widescreen_bg.c  actraiser_widescreen_sprites.c  banks.h  config.c  config.h  diorama.c  diorama.h  diorama_planes.h  gen_stubs.c  hd_replacements.c  hd_replacements.h  hd_tile_census.c  input_map.c  input_map.h  main.c  music_replacements.c  music_replacements.h  present.c  present.h  run_dir.c  run_dir.h  save_system.c  save_system.h  scene3d_math.c  scene3d_math.h  scene_asset_dump.c  scene_asset_dump.h  scene_inspector.c  scene_inspector.h  settings.c  settings.h  settings_overlay.c  (+17 more)
tests/: actraiser_game_test.c  hd_manifest_test.c  music_manifest_test.c  ppu_render_pipeline_test.c  render_pipeline_test.c  save_system_test.c  scene3d_math_test.c  scene_asset_dump_test.c  scene_inspector_test.c  settings_overlay_test.c  settings_test.c  sim_phase0_trace_test.c  sim_render_metadata_test.c  sim_town_canvas_test.c  sim_world_map_test.c
tests/fixtures/sim3d/: checkpoints.json  fillmore-legacy-seed.srm.b64  sim-actions-seed.srm.b64  sim-actions-settings.ini  sim-arrow-margin-settings.ini
tools/: ar_lib.py  build-macos.sh  cycle.sh  dis65.py  dump_chr.py  dump_snapshot_chr.py  find_handler_chain.py  find_rts_webs.py  find_tailcall_past_end.py  find_yield_helpers.py  find_yield_points.py  gen_metadata.py  icon_picker_sheet.py  link_audit.py  lzss_decompress.py  opcode_diff.py  regen.sh  resolve_miss.py  rom_info.py  romxref.py  run.sh  sim3d_demo.py  sim_object_catalog.py  srm.py  stub_census.py  town_structs.py  trace_slice.py  wram.py
tools/oracle/: README.md  build.sh  diff_aligned.py  diff_mx.py  diff_seq.py  diff_trace.py  snesref.cpp
